Remove 3 popup menu items to save space: Find Document Usage because Find Usage can be used instead. Go to Tag Declaration because Go to Tag Definition is more common. Go to Line because the toolbar item can be used instead.
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5223 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/geany.glade
+++ b/geany.glade
@@ -2503,11 +2503,23 @@
   </child>
 
   <child>
-    <widget class="GtkMenuItem" id="menu_open_selected_file2">
+    <widget class="GtkImageMenuItem" id="menu_open_selected_file2">
       <property name="visible">True</property>
       <property name="label" translatable="yes">Open Selected F_ile</property>
       <property name="use_underline">True</property>
       <signal name="activate" handler="on_menu_open_selected_file1_activate" last_modification_time="Wed, 24 Jan 2007 18:48:44 GMT"/>
+
+      <child internal-child="image">
+	<widget class="GtkImage" id="image3482">
+	  <property name="visible">True</property>
+	  <property name="stock">gtk-open</property>
+	  <property name="icon_size">1</property>
+	  <property name="xalign">0.5</property>
+	  <property name="yalign">0.5</property>
+	  <property name="xpad">0</property>
+	  <property name="ypad">0</property>
+	</widget>
+      </child>
     </widget>
   </child>
 
@@ -2546,7 +2558,7 @@
       <property name="use_underline">True</property>
 
       <child internal-child="image">
-	<widget class="GtkImage" id="image3411">
+	<widget class="GtkImage" id="image3483">
 	  <property name="visible">True</property>
 	  <property name="stock">gtk-add</property>
 	  <property name="icon_size">1</property>
@@ -2625,7 +2637,7 @@
       <property name="use_underline">True</property>
 
       <child internal-child="image">
-	<widget class="GtkImage" id="image3412">
+	<widget class="GtkImage" id="image3484">
 	  <property name="visible">True</property>
 	  <property name="stock">gtk-add</property>
 	  <property name="icon_size">1</property>
@@ -2657,7 +2669,7 @@
       <property name="use_underline">True</property>
 
       <child internal-child="image">
-	<widget class="GtkImage" id="image3413">
+	<widget class="GtkImage" id="image3485">
 	  <property name="visible">True</property>
 	  <property name="stock">gtk-add</property>
 	  <property name="icon_size">1</property>
@@ -2696,7 +2708,7 @@
       <signal name="activate" handler="on_find_usage1_activate" last_modification_time="Fri, 27 May 2005 21:55:12 GMT"/>
 
       <child internal-child="image">
-	<widget class="GtkImage" id="image3414">
+	<widget class="GtkImage" id="image3486">
 	  <property name="visible">True</property>
 	  <property name="stock">gtk-find</property>
 	  <property name="icon_size">1</property>
@@ -2710,68 +2722,14 @@
   </child>
 
   <child>
-    <widget class="GtkImageMenuItem" id="find_document_usage1">
-      <property name="visible">True</property>
-      <property name="label" translatable="yes">Find _Document Usage</property>
-      <property name="use_underline">True</property>
-      <signal name="activate" handler="on_find_document_usage1_activate" last_modification_time="Thu, 17 Jul 2008 13:42:25 GMT"/>
-
-      <child internal-child="image">
-	<widget class="GtkImage" id="image3415">
-	  <property name="visible">True</property>
-	  <property name="stock">gtk-find</property>
-	  <property name="icon_size">1</property>
-	  <property name="xalign">0.5</property>
-	  <property name="yalign">0.5</property>
-	  <property name="xpad">0</property>
-	  <property name="ypad">0</property>
-	</widget>
-      </child>
-    </widget>
-  </child>
-
-  <child>
-    <widget class="GtkMenuItem" id="goto_tag_definition1">
+    <widget class="GtkImageMenuItem" id="goto_tag_definition1">
       <property name="visible">True</property>
       <property name="label" translatable="yes">Go to _Tag Definition</property>
       <property name="use_underline">True</property>
       <signal name="activate" handler="on_goto_tag_definition1" last_modification_time="Thu, 09 Sep 2010 11:30:52 GMT"/>
-    </widget>
-  </child>
-
-  <child>
-    <widget class="GtkMenuItem" id="goto_tag_declaration1">
-      <property name="visible">True</property>
-      <property name="label" translatable="yes">Go to T_ag Declaration</property>
-      <property name="use_underline">True</property>
-      <signal name="activate" handler="on_goto_tag_declaration1" last_modification_time="Thu, 09 Sep 2010 11:30:52 GMT"/>
-    </widget>
-  </child>
-
-  <child>
-    <widget class="GtkMenuItem" id="context_action1">
-      <property name="visible">True</property>
-      <property name="label" translatable="yes">Conte_xt Action</property>
-      <property name="use_underline">True</property>
-      <signal name="activate" handler="on_context_action1_activate" last_modification_time="Fri, 13 Apr 2007 18:37:55 GMT"/>
-    </widget>
-  </child>
-
-  <child>
-    <widget class="GtkSeparatorMenuItem" id="separator15">
-      <property name="visible">True</property>
-    </widget>
-  </child>
-
-  <child>
-    <widget class="GtkImageMenuItem" id="go_to_line">
-      <property name="visible">True</property>
-      <property name="label" translatable="yes">_Go to Line</property>
-      <property name="use_underline">True</property>
-      <signal name="activate" handler="on_go_to_line_activate" last_modification_time="Sat, 16 Jul 2005 11:20:32 GMT"/>
 
       <child internal-child="image">
-	<widget class="GtkImage" id="image3416">
+	<widget class="GtkImage" id="image3487">
 	  <property name="visible">True</property>
 	  <property name="stock">gtk-jump-to</property>
 	  <property name="icon_size">1</property>
@@ -2781,6 +2739,15 @@
 	  <property name="ypad">0</property>
 	</widget>
       </child>
+    </widget>
+  </child>
+
+  <child>
+    <widget class="GtkMenuItem" id="context_action1">
+      <property name="visible">True</property>
+      <property name="label" translatable="yes">Conte_xt Action</property>
+      <property name="use_underline">True</property>
+      <signal name="activate" handler="on_context_action1_activate" last_modification_time="Fri, 13 Apr 2007 18:37:55 GMT"/>
     </widget>
   </child>
 </widget>
