--- a/data/filetypes.css
+++ b/data/filetypes.css
@@ -40,7 +40,7 @@ browser_pseudo_elements=
 
 [settings]
 # default extension used when saving files
-#extension=css
+extension=css
 
 # the following characters are these which a "word" can contains, see documentation
 #wordchars=_-abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789
